iptables
# Generated by iptables-save v1.4.21 on Sat Jun 16 09:24:20 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [46:4168]
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -i eth2 -o eth1 -j ACCEPT
-A FORWARD -i eth1 -o eth2 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Sat Jun 16 09:24:20 2018
# Generated by iptables-save v1.4.21 on Sat Jun 16 09:24:20 2018
*nat
:PREROUTING ACCEPT [32:9016]
:INPUT ACCEPT [2:388]
:OUTPUT ACCEPT [59:4711]
:POSTROUTING ACCEPT [1:340]
-A POSTROUTING -o eth2 -j MASQUERADE
COMMIT
# Completed on Sat Jun 16 09:24:20 2018
